# 5g-nr-pdsch-tbsize

./: README.md  five_g_nr_tbs_calc_pdsch.py
ecpri_pcap_parser/: Cargo.toml  EcpriIqData.csv  L2 logs analysis.pptx  ul_bler_1_sg.pcap
ecpri_pcap_parser/gsl_library/gsl_x64-windows/: CONTROL
ecpri_pcap_parser/gsl_library/gsl_x64-windows/debug/lib/: gslcblasd.lib  gsld.lib
ecpri_pcap_parser/gsl_library/gsl_x64-windows/lib/: gsl.lib  gslcblas.lib
ecpri_pcap_parser/gsl_library/gsl_x64-windows/share/gsl/: vcpkg_abi_info.txt
ecpri_pcap_parser/gsl_library/gsl_x86-windows/: CONTROL
ecpri_pcap_parser/gsl_library/gsl_x86-windows/debug/lib/: gslcblasd.lib  gsld.lib
ecpri_pcap_parser/gsl_library/gsl_x86-windows/include/gsl/: gsl_types.h
ecpri_pcap_parser/gsl_library/gsl_x86-windows/lib/: gsl.lib  gslcblas.lib
ecpri_pcap_parser/gsl_library/gsl_x86-windows/share/gsl/: vcpkg_abi_info.txt
ecpri_pcap_parser/pcap-parser-0.9.1/src/: pcap.rs
ecpri_pcap_parser/src/: lib.rs  main.rs
ecpri_pcap_parser/src/protocols/: bip.rs  ecpri.rs  ethernet.rs  mod.rs  types.rs
ecpri_pcap_parser/src/utility/: ecpri_analysis.rs  mod.rs
